frontend/tests/errors/ER-007/nested_conditional/test.vx
// @rfc: docs/vexel-rfc.md#errors--diagnostics
// @desc: Ambiguous parsing: Multiple valid parse trees trigger a compile-time error | Ambiguous parsing: nested conditional without parentheses


&^main() -> #i32 {
    let x = 1 ? 1 : 0 ? 2 : 3;
    x
}
